removed explicit password

--- a/examples/position_query.ipynb
+++ b/examples/position_query.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "lensdata = {'ra':ra, 'dec':dec, 'radius':10.}\n",
-    "r = requests.post(urlquery, data=lensdata, auth=HTTPBasicAuth('Cameron','123'))\n",
+    "r = requests.post(urlquery, data=lensdata, auth=HTTPBasicAuth(username, password))\n",
     "dbquery = json.loads(r.text)"
    ]
   },
