Created a box and cone search with the possibilities of appending the redshifts, imaging, spectra and paper data

--- a/examples/cone_search_example.ipynb
+++ b/examples/cone_search_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 94,
    "id": "da61a48e-7ba9-439d-917e-4f3fd8b24227",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,18 @@
     "tags": []
    },
    "source": [
-    "### Let's define the specific API endpoint and load credentials\n",
+    "### 1. Let's define the specific API endpoint and load credentials\n",
     "You should NOT save your passwords in Python documents. Instead it is safest to either set them as environment variables, for example in your shell profile file (e.g., in Unix/Linux/Mac include export SLED_PASSWORD=??? and export SLED_USERNAME=??? in your .bash_profile), or in an environment file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 95,
    "id": "634cd7a3-af76-4bb0-b086-76eabb903a5d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "urlquery = \"http://127.0.0.1:8000/api/query-lenses/\"\n",
+    "urlquery = \"http://127.0.0.1:8000/api/query-lenses-full/\"\n",
     "username, password = os.getenv('SLED_USERNAME'), os.getenv('SLED_PASSWORD')\n",
     "\n",
     "if (not username) or (not password):\n",
@@ -54,13 +54,13 @@
    "id": "8624f4ce",
    "metadata": {},
    "source": [
-    "### Define your coordinate positions and search radius for a cone-search\n",
+    "### 2. Define your coordinate positions and search radius for a cone-search\n",
     "Coordinates should be in decimal degrees, and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the following astropy coords functionality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 96,
    "id": "a32ee986",
    "metadata": {},
    "outputs": [],
@@ -73,12 +73,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 97,
    "id": "32bbff00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "radius = 10."
+    "radius = 10./3600 # in degrees"
    ]
   },
   {
@@ -86,18 +86,19 @@
    "id": "37f15972",
    "metadata": {},
    "source": [
-    "### Now we query the database by sending the relevant information in a dictionary\n",
+    "### 3. Now we query the database by sending the relevant information in a dictionary\n",
     "Use the requests package to send a POST request to the relevant API endpoint, and parse the response as a json, which will contain a single key 'lenses', the contents of which will be a list of dictionaries corresponding to database matches within the radius of the search position"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "id": "60ba08ef-b3f2-49b0-900d-7c0b05be6c08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lensdata = {'ra':ra, 'dec':dec, 'radius':10.}\n",
+    "lensdata = {'lens-ra_centre':ra, 'lens-dec_centre':dec, 'lens-radius':radius,\n",
+    "            'append_papers':False, 'append_images':True, 'append_spectra':False, 'append_redshifts':False}\n",
     "\n",
     "r = requests.post(urlquery, data=lensdata, auth=HTTPBasicAuth(username, password))\n",
     "\n",
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 99,
    "id": "4cf79e37-b2ea-40e4-a285-6291b1a561c7",
    "metadata": {},
    "outputs": [],
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 100,
    "id": "fd5e7b07",
    "metadata": {},
    "outputs": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 101,
    "id": "5362f726",
    "metadata": {
     "scrolled": true
@@ -158,12 +159,12 @@
    "id": "d141ba24",
    "metadata": {},
    "source": [
-    "### Here are all the keys returned for the main lens metadata table. Please see other example documents on how to return values from the fields of other tables, such as papers"
+    "### 4. Here are all the keys returned for the main lens metadata table. Please see other example documents on how to return values from the fields of other tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 102,
    "id": "5f11ab96",
    "metadata": {},
    "outputs": [
@@ -171,29 +172,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id\n",
-      "access_level\n",
-      "ra\n",
-      "dec\n",
-      "name\n",
-      "alt_name\n",
-      "score\n",
-      "image_sep\n",
-      "info\n",
-      "n_img\n",
-      "flag\n",
-      "image_conf\n",
-      "lens_type\n",
-      "source_type\n",
-      "contaminant_type\n"
+      "id = 3617\n",
+      "created_at = 2024-03-14T01:02:07.904133Z\n",
+      "modified_at = 2024-03-14T01:02:07.985404Z\n",
+      "access_level = PUB\n",
+      "ra = 260.45419\n",
+      "dec = 88.70621\n",
+      "name = J1721+8842\n",
+      "alt_name = None\n",
+      "score = None\n",
+      "image_sep = 4.03\n",
+      "info = \n",
+      "n_img = 6\n",
+      "flag = CONFIRMED\n",
+      "image_conf = ['LONG-AXIS CUSP', 'CUSP']\n",
+      "lens_type = ['GALAXY']\n",
+      "source_type = ['QUASAR', 'DLA', 'PDLA']\n",
+      "contaminant_type = []\n",
+      "images = [{'access_level': 'PUB', 'instrument': 'WFC3', 'date_taken': '2019-06-09', 'exists': True, 'future': False, 'info': '', 'exposure_time': 2196.932, 'pixel_size': 0.128, 'band': 'F160W', 'url': 'https://hla.stsci.edu/cgi-bin/fitscut.cgi?red=hst_15652_15_wfc3_ir_f160w_idxo15&RA=260.45419&Dec=88.70621&size=110&format=FITS'}, {'access_level': 'PUB', 'instrument': 'WFC3', 'date_taken': '2019-06-09', 'exists': True, 'future': False, 'info': '', 'exposure_time': 1382.0, 'pixel_size': 0.04, 'band': 'F475X', 'url': 'https://hla.stsci.edu/cgi-bin/fitscut.cgi?red=idxo15010&RA=260.45419&Dec=88.70621&size=356&format=FITS'}, {'access_level': 'PUB', 'instrument': 'WFC3', 'date_taken': '2019-06-09', 'exists': True, 'future': False, 'info': '', 'exposure_time': 1428.0, 'pixel_size': 0.04, 'band': 'F814W', 'url': 'https://hla.stsci.edu/cgi-bin/fitscut.cgi?red=idxo15020&RA=260.45419&Dec=88.70621&size=356&format=FITS'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-28', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 731.0, 'pixel_size': 0.25, 'band': 'g', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-12-26', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1260.0, 'pixel_size': 0.25, 'band': 'i', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2013-04-01', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1060.0, 'pixel_size': 0.25, 'band': 'r', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-08-27', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 660.0, 'pixel_size': 0.25, 'band': 'z', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-04-13', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 870.0, 'pixel_size': 0.25, 'band': 'Y', 'url': ''}]\n"
      ]
     }
    ],
    "source": [
     "if len(lenses):\n",
     "    for key in lenses[0].keys():\n",
-    "        print(key)"
+    "        print(key,'=',lenses[0][key])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7e9a53c-a4c2-46c5-a729-227f7bdcbc40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "def40d67-d87e-4549-90b1-1c5e6b189fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -212,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
