Added appending of catalogue information being returned in the full query API functionality

--- a/examples/box_search_example.ipynb
+++ b/examples/box_search_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 523,
    "id": "da61a48e-7ba9-439d-917e-4f3fd8b24227",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 524,
    "id": "634cd7a3-af76-4bb0-b086-76eabb903a5d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 525,
    "id": "a32ee986",
    "metadata": {},
    "outputs": [],
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 527,
    "id": "60ba08ef-b3f2-49b0-900d-7c0b05be6c08",
    "metadata": {},
    "outputs": [],
    "source": [
     "lensdata = {'lens-ra_min':round(ra_min, 4), 'lens-ra_max':round(ra_max, 4),\n",
     "            'lens-dec_min':round(dec_min, 4), 'lens-dec_max':round(dec_max, 4),\n",
-    "            'append_papers':1, 'append_images':1, 'append_spectra':1, 'append_redshifts':1}\n",
+    "            'append_papers':1, 'append_images':1, 'append_spectra':1, 'append_redshifts':1, 'append_catalogue':1}\n",
     "\n",
     "r = requests.post(urlquery, data=lensdata, auth=HTTPBasicAuth(username, password))\n",
     "\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 528,
    "id": "4cf79e37-b2ea-40e4-a285-6291b1a561c7",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 529,
    "id": "fd5e7b07",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 530,
    "id": "5362f726",
    "metadata": {
     "scrolled": true
@@ -288,9 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 531,
    "id": "5f11ab96",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -315,8 +317,9 @@
       "contaminant_type = []\n",
       "redshifts = []\n",
       "papers = [{'ads_id': 20838736, 'bibcode': '2021A&A...655A.114C', 'year': 2021, 'first_author': 'Chao, Dani C. -Y.', 'title': 'Strongly lensed candidates from the HSC transient survey', 'cite_as': 'Chao, Dani C. -Y. et al. (2021)'}]\n",
-      "images = [{'id': 27903, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2013-01-09', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1298.0, 'pixel_size': 0.25, 'band': 'i', 'url': ''}, {'id': 29560, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-15', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 556.0, 'pixel_size': 0.25, 'band': 'z', 'url': ''}, {'id': 38631, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-05', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 590.0, 'pixel_size': 0.25, 'band': 'Y', 'url': ''}, {'id': 43806, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-01-24', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 2004.0, 'pixel_size': 0.25, 'band': 'r', 'url': ''}, {'id': 57103, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2011-01-16', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1994.0, 'pixel_size': 0.25, 'band': 'g', 'url': ''}, {'id': 81307, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'g', 'url': ''}, {'id': 99213, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'z', 'url': ''}, {'id': 128764, 'owner': 4, 'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'r', 'url': ''}]\n",
-      "spectra = [{'id': 14555, 'owner': 4, 'access_level': 'PUB', 'instrument': 'SDSS-spec', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'lambda_min': None, 'lambda_max': None, 'exposure_time': None, 'resolution': None}]\n"
+      "images = [{'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2013-01-09', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1298.0, 'pixel_size': 0.25, 'band': 'i', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-15', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 556.0, 'pixel_size': 0.25, 'band': 'z', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-05', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 590.0, 'pixel_size': 0.25, 'band': 'Y', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-01-24', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 2004.0, 'pixel_size': 0.25, 'band': 'r', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2011-01-16', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1994.0, 'pixel_size': 0.25, 'band': 'g', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'g', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'z', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'r', 'url': ''}]\n",
+      "spectra = [{'access_level': 'PUB', 'instrument': 'SDSS-spec', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'lambda_min': None, 'lambda_max': None, 'exposure_time': None, 'resolution': None}]\n",
+      "catalogue = [{'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 20.131, 'Dmag': 0.14, 'distance': 0.268, 'band': 'Y'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 21.884, 'Dmag': 0.2, 'distance': 0.268, 'band': 'g'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 20.913, 'Dmag': 0.047, 'distance': 0.268, 'band': 'i'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 22.145, 'Dmag': 0.065, 'distance': 0.268, 'band': 'r'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 20.46, 'Dmag': 0.077, 'distance': 0.268, 'band': 'z'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR1', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'G'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR2', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'BP'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR2', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'G'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR2', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'RP'}]\n"
      ]
     }
    ],
@@ -330,6 +333,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c64f33d6-75f1-4365-bba6-b094e1293fc3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc0f00cd-0830-46f6-b2cd-65baac5d0b73",
    "metadata": {},
    "outputs": [],
    "source": []
