--- a/examples/box_search_example.ipynb
+++ b/examples/box_search_example.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": null,
    "id": "da61a48e-7ba9-439d-917e-4f3fd8b24227",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": null,
    "id": "634cd7a3-af76-4bb0-b086-76eabb903a5d",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": null,
    "id": "a32ee986",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": null,
    "id": "60ba08ef-b3f2-49b0-900d-7c0b05be6c08",
    "metadata": {},
    "outputs": [],
@@ -100,13 +100,13 @@
     "            'append_papers':1, 'append_images':1, 'append_spectra':1, 'append_redshifts':1, 'append_catalogue':1}\n",
     "\n",
     "r = requests.post(urlquery, data=lensdata, auth=HTTPBasicAuth(username, password))\n",
-    "\n",
+    "#print(r.text)\n",
     "dbquery = json.loads(r.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": null,
    "id": "4cf79e37-b2ea-40e4-a285-6291b1a561c7",
    "metadata": {},
    "outputs": [],
@@ -116,163 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": null,
    "id": "fd5e7b07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your search returned 126 SLED match(es) with the following names:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Your search returned', len(lenses), 'SLED match(es) with the following names:')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": null,
    "id": "5362f726",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HSCJ095744+023835\n",
-      "J095748+015523\n",
-      "HSCJ095750.10+014507.5\n",
-      "J095750+015618\n",
-      "J095752+022057\n",
-      "J095754+015952\n",
-      "J095757+014412\n",
-      "J095758+021524\n",
-      "J095805+020413\n",
-      "J095806+015809\n",
-      "J095810+022942\n",
-      "J095810+013650\n",
-      "SDSSJ0958+0135\n",
-      "J095826+024835\n",
-      "J095829+024359\n",
-      "J095829+013733\n",
-      "J095830+022117\n",
-      "J095831+014332\n",
-      "J095831+015256\n",
-      "J095834+020807\n",
-      "J095841+024645\n",
-      "095850+023052\n",
-      "J095853+022543\n",
-      "J095855+020850\n",
-      "J095856+024754\n",
-      "J095857+015948\n",
-      "SL2SJ095907+020450\n",
-      "J095914+021219\n",
-      "J095921+020638\n",
-      "J095925+023903\n",
-      "J095925+020643\n",
-      "J095928+014552\n",
-      "COSMOSJ095930.94+023427.7\n",
-      "J095931+020229\n",
-      "J095931+021018\n",
-      "J095934+020633\n",
-      "J095936+023620\n",
-      "SA78\n",
-      "J095940+023253\n",
-      "SA79\n",
-      "J095943+022815\n",
-      "HSCJ095943.44+022213.4\n",
-      "HSCJ095943+022046\n",
-      "J095947+024752\n",
-      "J095950+022057\n",
-      "J095952+023356\n",
-      "SA80\n",
-      "J095959+020347\n",
-      "SL2SJ100009+022455\n",
-      "SL2SJ100012+022015\n",
-      "SL2SJ100013+022249\n",
-      "J100015+023620\n",
-      "J100015+014619\n",
-      "SL2SJ100018+023845\n",
-      "J1000+0221\n",
-      "J100020+022150\n",
-      "J100020+021751\n",
-      "J100021+015609\n",
-      "J100022+021801\n",
-      "WFC3J100023.53+021653.34\n",
-      "J100024+024211\n",
-      "J100024+025039\n",
-      "J100025+022558\n",
-      "J100028+021600\n",
-      "HAHJ1000+0237\n",
-      "J100033+022752\n",
-      "J100038+024133\n",
-      "J100043+014253\n",
-      "J100047+022930\n",
-      "J100047+015022\n",
-      "J1000+0139\n",
-      "J100049+015128\n",
-      "J100050+013251\n",
-      "J100050+024900\n",
-      "J100050+020356\n",
-      "J100052+023934\n",
-      "J100055+013821\n",
-      "SL2SJ100056+021226\n",
-      "J100100+024550\n",
-      "J100102+021235\n",
-      "J100105+024530\n",
-      "100108+024029\n",
-      "J100116+023153\n",
-      "J100119+024018\n",
-      "J100120+014551\n",
-      "J100124+015120\n",
-      "COSMOSJ100126.02+013714.5\n",
-      "HSCJ100129+024427\n",
-      "J1001+0219\n",
-      "SA81\n",
-      "J1001+0233\n",
-      "J100138+021831\n",
-      "COSMOSJ100140.12+020040.9\n",
-      "SDSSJ1001+0156\n",
-      "J100141+015904\n",
-      "100141+020444\n",
-      "HAHJ1001+0214\n",
-      "HAHJ1001+0154\n",
-      "J100145+014517\n",
-      "J100146+025052\n",
-      "SA82\n",
-      "SL2SJ100148+022325\n",
-      "CXCOJ100201.50+020330.0\n",
-      "J100207+023415\n",
-      "SL2SJ100208+021422\n",
-      "SL2SJ100211+021139\n",
-      "SA84\n",
-      "J100211+024558\n",
-      "J100211+020827\n",
-      "SA85\n",
-      "SL2SJ100216+022955\n",
-      "J100217+023023\n",
-      "100220+022335\n",
-      "SL2SJ100221+023440\n",
-      "HAHJ1002+0232\n",
-      "J100227+020450\n",
-      "J100229+023225\n",
-      "J100234+024832\n",
-      "J100235+015025\n",
-      "J100236+024806\n",
-      "J100237+022652\n",
-      "J100240+020528\n",
-      "J100246+023252\n",
-      "J100254+021430\n",
-      "J100259+023957\n",
-      "HSCJ100307+020241\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for lens in lenses:\n",
     "    print(lens['name'])"
@@ -288,41 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": null,
    "id": "5f11ab96",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id = 10084\n",
-      "created_at = 2024-03-14T01:40:00.478516Z\n",
-      "modified_at = 2024-03-14T01:40:00.504067Z\n",
-      "access_level = PUB\n",
-      "ra = 149.43571\n",
-      "dec = 2.64332\n",
-      "name = HSCJ095744+023835\n",
-      "alt_name = None\n",
-      "score = 1.0\n",
-      "image_sep = None\n",
-      "info = \n",
-      "n_img = None\n",
-      "flag = CANDIDATE\n",
-      "image_conf = []\n",
-      "lens_type = ['GALAXY']\n",
-      "source_type = ['QUASAR']\n",
-      "contaminant_type = []\n",
-      "redshifts = []\n",
-      "papers = [{'ads_id': 20838736, 'bibcode': '2021A&A...655A.114C', 'year': 2021, 'first_author': 'Chao, Dani C. -Y.', 'title': 'Strongly lensed candidates from the HSC transient survey', 'cite_as': 'Chao, Dani C. -Y. et al. (2021)'}]\n",
-      "images = [{'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2013-01-09', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1298.0, 'pixel_size': 0.25, 'band': 'i', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-15', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 556.0, 'pixel_size': 0.25, 'band': 'z', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-05-05', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 590.0, 'pixel_size': 0.25, 'band': 'Y', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2012-01-24', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 2004.0, 'pixel_size': 0.25, 'band': 'r', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '2011-01-16', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1994.0, 'pixel_size': 0.25, 'band': 'g', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'g', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'z', 'url': ''}, {'access_level': 'PUB', 'instrument': 'Legacy Survey (DR10)', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': 'stack', 'exposure_time': 1.0, 'pixel_size': 0.262, 'band': 'r', 'url': ''}]\n",
-      "spectra = [{'access_level': 'PUB', 'instrument': 'SDSS-spec', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'lambda_min': None, 'lambda_max': None, 'exposure_time': None, 'resolution': None}]\n",
-      "catalogue = [{'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 20.131, 'Dmag': 0.14, 'distance': 0.268, 'band': 'Y'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 21.884, 'Dmag': 0.2, 'distance': 0.268, 'band': 'g'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 20.913, 'Dmag': 0.047, 'distance': 0.268, 'band': 'i'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 22.145, 'Dmag': 0.065, 'distance': 0.268, 'band': 'r'}, {'access_level': 'PUB', 'instrument': 'Pan-STARRS1', 'date_taken': '1858-11-17', 'exists': True, 'future': False, 'info': '', 'radet': 149.4356833, 'decdet': 2.6432506, 'mag': 20.46, 'Dmag': 0.077, 'distance': 0.268, 'band': 'z'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR1', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'G'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR2', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'BP'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR2', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'G'}, {'access_level': 'PRI', 'instrument': 'Gaia-DR2', 'date_taken': '1858-11-17', 'exists': False, 'future': False, 'info': '', 'radet': 149.43571, 'decdet': 2.64332, 'mag': None, 'Dmag': None, 'distance': None, 'band': 'RP'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if len(lenses):\n",
     "    for key in lenses[0].keys():\n",
@@ -362,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
