Debugged lens upload API function by changing the clean function of the BaseLensAddUpdateFormSet to check that the form was for creating a new object or not, with the self.initial_forms value.

--- a/examples/lens_upload.ipynb
+++ b/examples/lens_upload.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "da61a48e-7ba9-439d-917e-4f3fd8b24227",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "id": "634cd7a3-af76-4bb0-b086-76eabb903a5d",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "id": "60ba08ef-b3f2-49b0-900d-7c0b05be6c08",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 35,
    "id": "4d44c949-bc53-48f8-9d53-2281a94e5e22",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'errors': {'non_form_errors': ['No changes detected.']}}\n"
+      "{'message': 'Lenses successfully added to the database!'}\n"
      ]
     }
    ],
@@ -131,17 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "id": "6ab6c385-6d1e-4fe4-9d10-5d09d9d13287",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [400]>"
+       "<Response [201]>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 37,
    "id": "540db253-7276-440e-b4d3-fb723b08654c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"errors\":{\"non_form_errors\":[\"No changes detected.\"]}}'"
+       "b'{\"message\":\"Lenses successfully added to the database!\"}'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
