Linked howto to github script.

--- a/examples/howto_simple_query.ipynb
+++ b/examples/howto_simple_query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fc22a4a",
+   "id": "307cdf78",
    "metadata": {},
    "source": [
     "## Simple query based on given coordinates"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de68474",
+   "id": "4cf16fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68a3929b",
+   "id": "59cdb6d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71d4403c",
+   "id": "92d675da",
    "metadata": {},
    "source": [
     "### 2. Define a list of RA and DEC coordinates\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54d81d93",
+   "id": "e8e04057",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63443058",
+   "id": "183a5b91",
    "metadata": {},
    "source": [
     "### 3. Now we query the database\n",
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2df93ec",
+   "id": "c3f0464a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,21 +117,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "481b2edd",
+   "id": "8154db67",
    "metadata": {},
    "source": [
     "### 4. Understanding the response\n",
     "\n",
     "The response is a dictionary that contains two keys:\n",
     "\n",
-    "- *'existing_at'*: the indices of the RA and DEC arrays where a lens was found in SLED.\n",
-    "- *'lenses'*: the corresponding lens from SLED."
+    "- *'existing_at'*: a list of all the indices in the given RA and DEC arrays where a lens was found in SLED.\n",
+    "- *'lenses'*: a list of all the corresponding lenses and their fields from SLED."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78a95d7d",
+   "id": "ea3096e3",
    "metadata": {},
    "outputs": [],
    "source": [
