Fixed example notebook title.

--- a/examples/howto_upload_lenses.ipynb
+++ b/examples/howto_upload_lenses.ipynb
@@ -5,7 +5,7 @@
    "id": "307cdf78",
    "metadata": {},
    "source": [
-    "## Simple query based on given coordinates"
+    "## Uploading many lenses"
    ]
   },
   {
