Description of a Lens object added to the guide.

--- a/examples/howto_upload_lenses.ipynb
+++ b/examples/howto_upload_lenses.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "### 2. Define a list of lens dictionaries\n",
     "\n",
-    "The minimum information required to upload a lens is the RA, DEC, and an image. Coordinates should be in decimal degrees and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the astropy coords functionality. The lens image can be in <code>.png, .jpg, or .jpeg</code> format. It is recommended to restrict access to the uploaded lenses by setting <code>'access_level'='PRI'</code> (or just omitting this field). Additional fields can be added to each lens, as described in the [SLED guide](https://sled.amnh.org/sled_guide/#lens-object)."
+    "The minimum information required to upload a lens is the RA, DEC, and an image. Coordinates should be in decimal degrees and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the astropy coords functionality. The lens image can be in <code>.png, .jpg, or .jpeg</code> format. It is recommended to restrict access to the uploaded lenses by setting <code>'access_level'='PRI'</code> (or just omitting this field). Additional fields can be added to each lens, as described in the [SLED guide](https://sled.amnh.org/sled_guide/#object-specs-lens)."
    ]
   },
   {
