Added all information in the guide, how to, and example scripts, for injecting data.

--- a/examples/howto_upload_redshifts.ipynb
+++ b/examples/howto_upload_redshifts.ipynb
@@ -5,7 +5,7 @@
    "id": "307cdf78",
    "metadata": {},
    "source": [
-    "## Uploading many lenses"
+    "## Uploading many redshifts"
    ]
   },
   {
@@ -20,7 +20,6 @@
     "import json\n",
     "import requests\n",
     "from requests.auth import HTTPBasicAuth\n",
-    "import base64\n",
     "\n",
     "# Optional (if reading from a .csv file)\n",
     "import numpy as np\n",
@@ -58,9 +57,9 @@
    "id": "92d675da",
    "metadata": {},
    "source": [
-    "### 2. Define a list of lens dictionaries\n",
+    "### 2. Define a list of redshift dictionaries\n",
     "\n",
-    "The minimum information required to upload a lens is the RA, DEC, and an image. Coordinates should be in decimal degrees and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the astropy coords functionality. The lens image can be in <code>.png, .jpg, or .jpeg</code> format. It is recommended to restrict access to the uploaded lenses by setting <code>'access_level'='PRI'</code> (or just omitting this field). Additional fields can be added to each lens, as described in the [SLED guide](https://sled.amnh.org/sled_guide/#object-specs-lens)."
+    "All the fields associated with redshifts are described in the [SLED guide](https://sled.amnh.org/sled_guide/#object-specs-redshift). In addition to these fields, the RA and DEC of the associated lens must be given. Coordinates should be in decimal degrees and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the astropy coords functionality. It is recommended to restrict access to the uploaded data by setting <code>'access_level'='PRI'</code> (or just omitting this field)."
    ]
   },
   {
@@ -70,15 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A template lens object. Only ra, dec, and mugshot are required, the rest is optional:\n",
-    "lens_tmp = {\n",
+    "# A template redshift object. The RA and DEC are required only to match it to the correct lens.\n",
+    "redshift_tmp = {\n",
     "    'ra': 0.0,  # Decimal field, up to 5 decimal places, between 0 and 360\n",
     "    'dec': 0.0,  # Decimal field, up to 5 decimal places, between -90 and 90\n",
-    "    'name': '',  # String, max_length=100\n",
-    "    'score': 0,  # Decimal number, between 0 and 3\n",
-    "    'mugshot': '',  # The name of the image file, this will be replaced by the actual image data further down\n",
-    "    'flag': 'CANDIDATE', # String, pre-defined choices, see guide\n",
-    "    'lens_type': ['GALAXY'], # List of Strings, pre-defined choices, see guide\n",
+    "    'value': 0.4, # Decimal field\n",
+    "    'tag': 'LENS', # String, pre-defined choices, see guide\n",
+    "    'method': 'PHOTO',  # String, pre-defined choices, see guide\n",
+    "    'info': 'I obtained this redshift with my own telescope.', # String\n",
     "    'access_level': 'PRI'\n",
     "}\n",
     "\n",
@@ -86,44 +84,36 @@
     "# Here we have the RA, DEC, and an image file name as lists:\n",
     "ras = [0.1,0.2] # dummy values\n",
     "decs = [-10.1,-10.2] # dummy values\n",
-    "fnames = ['lens01.png','lens02.png'] # dummy values\n",
+    "values = [0.4,0.5] # dummy values\n",
     "\n",
-    "## If reading from a .csv file use the following command:\n",
-    "#ras,decs,fnames = np.genfromtxt('random_file.csv',dtype=None,skip_header=1,usecols=[0,3,4],delimiter=',',encoding=None,unpack=True)\n",
-    "\n",
-    "# And a path where our images are stored:\n",
-    "path_to_img = 'some/dummy/path/'\n",
+    "## If reading from a .csv file use the following command (assuming 'instrument' doesn't change):\n",
+    "#ras,decs,values = np.genfromtxt('random_file.csv',dtype=None,skip_header=1,usecols=[0,1,4],delimiter=',',encoding=None,unpack=True)\n",
     "\n",
     "\n",
-    "\n",
-    "# We define a list of lens objects:\n",
-    "new_lenses = []\n",
+    "# We define a list of redshift objects:\n",
+    "new_redshifts = []\n",
     "for i in range(0,len(ras)):\n",
-    "    lens = lens_tmp.copy()\n",
+    "    redshift = redshift_tmp.copy()\n",
     "\n",
-    "    lens['mugshot'] = path_to_img + fnames[i]\n",
-    "    lens['ra'] = round(ras[i],5)\n",
-    "    lens['dec'] = round(decs[i],5)\n",
-    "\n",
+    "    redshift['ra'] = round(ras[i],5)\n",
+    "    redshift['dec'] = round(decs[i],5)\n",
+    "    redshift['value'] = values[i]\n",
+    "    \n",
     "    ## If the RA and DEC are not in decimal degrees then use the following lines instead:\n",
     "    #c1 = SkyCoord(ras[i], unit=(u.hourangle, u.deg))\n",
     "    #c2 = SkyCoord(decs[i], unit=(u.hourangle, u.deg))\n",
-    "    #lens['ra'] = round(c1,5)\n",
-    "    #lens['dec'] = round(c2,5)\n",
+    "    #redshift['ra'] = round(c1,5)\n",
+    "    #redshift['dec'] = round(c2,5)\n",
     "    \n",
-    "    if not os.path.isfile(lens['mugshot']):\n",
-    "        print(i,': NO image found with this filename: ',lens['mugshot'])\n",
-    "        sys.exit()\n",
-    "    else:\n",
-    "        new_lenses.append(lens)\n",
+    "    new_redshifts.append(redshift)\n",
     "\n",
     "        \n",
-    "print('Lenses to be injected: ',len(new_lenses))\n",
-    "if len(new_lenses)>0:\n",
-    "    print('First lens in the list looks like this: ')\n",
-    "    print(new_lenses[0])\n",
+    "print('Redshift objects to be injected: ',len(new_redshifts))\n",
+    "if len(new_redshifts)>0:\n",
+    "    print('First redshift in the list looks like this: ')\n",
+    "    print(new_redshifts[0])\n",
     "else:\n",
-    "    print('No lenses to inject!')\n",
+    "    print('No redshifts to inject!')\n",
     "    sys.exit()"
    ]
   },
@@ -134,7 +124,7 @@
    "source": [
     "### 3. Now send request to the database\n",
     "\n",
-    "Use the requests package to send a POST request to the relevant API endpoint. The *'mugshot'* field for each lens is replaced by the actual image data in base64 encoding. There is no need to change the following lines.\n"
+    "Use the requests package to send a POST request to the relevant API endpoint. There is no need to change the following lines.\n"
    ]
   },
   {
@@ -144,12 +134,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for lens in new_lenses:\n",
-    "    lens['mugshot'] = image_to_base64(f\"{lens['mugshot']}\")\n",
-    "\n",
+    "final_json = {\n",
+    "    'data_type': 'redshift',\n",
+    "    'data': new_redshifts    \n",
+    "}\n",
+    "        \n",
     "print(\"Uploading to the SLED server...\")\n",
-    "r = requests.post(\"https://sled.amnh.org/api/upload-lenses/\",\n",
-    "                  data=json.dumps(new_lenses),\n",
+    "r = requests.post(\"https://sled.amnh.org/api/upload-data/\",\n",
+    "                  data=json.dumps(final_json),\n",
     "                  headers={'Content-Type':'application/json'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
@@ -163,10 +155,9 @@
    "source": [
     "### 4. Understanding the response\n",
     "\n",
-    "There are three possible types of response from the SLED API:\n",
+    "There are two possible types of response from the SLED API:\n",
     "- *errors*: your uploaded sample contains errors, e.g. the RA,DEC are not in the right format, etc.\n",
-    "- *further action required*: if duplicates are found or if public (PUB) lenses are uploaded there will be some further action required.\n",
-    "- *success*: the sample of new lenses was uploaded successfully"
+    "- *success*: the sample of new data was uploaded successfully"
    ]
   },
   {
