--- a/examples/howto_upload_imaging_data.ipynb
+++ b/examples/howto_upload_imaging_data.ipynb
@@ -5,7 +5,7 @@
    "id": "307cdf78",
    "metadata": {},
    "source": [
-    "## Uploading many lenses"
+    "## Uploading many imaging data"
    ]
   },
   {
@@ -58,9 +58,9 @@
    "id": "92d675da",
    "metadata": {},
    "source": [
-    "### 2. Define a list of lens dictionaries\n",
+    "### 2. Define a list of imaging data dictionaries\n",
     "\n",
-    "The minimum information required to upload a lens is the RA, DEC, and an image. Coordinates should be in decimal degrees and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the astropy coords functionality. The lens image can be in <code>.png, .jpg, or .jpeg</code> format. It is recommended to restrict access to the uploaded lenses by setting <code>'access_level'='PRI'</code> (or just omitting this field). Additional fields can be added to each lens, as described in the [SLED guide](https://sled.amnh.org/sled_guide/#object-specs-lens)."
+    "All the fields associated with imaging data are described in the [SLED guide](https://sled.amnh.org/sled_guide/#object-specs-imaging). In addition to these fields, the RA and DEC of the associated lens must be given. Coordinates should be in decimal degrees and in the J2000 system. To convert from ra/dec in hours-minutes/degrees-minutes, you can use the astropy coords functionality. The associated image can be in <code>.png, .jpg, or .jpeg</code> format. It is recommended to restrict access to the uploaded data by setting <code>'access_level'='PRI'</code> (or just omitting this field). "
    ]
   },
   {
@@ -70,15 +70,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A template lens object. Only ra, dec, and mugshot are required, the rest is optional:\n",
-    "lens_tmp = {\n",
+    "# A template imaging data object. The RA and DEC are required only to match it to the correct lens.\n",
+    "imaging_tmp = {\n",
     "    'ra': 0.0,  # Decimal field, up to 5 decimal places, between 0 and 360\n",
     "    'dec': 0.0,  # Decimal field, up to 5 decimal places, between -90 and 90\n",
-    "    'name': '',  # String, max_length=100\n",
-    "    'score': 0,  # Decimal number, between 0 and 3\n",
-    "    'mugshot': '',  # The name of the image file, this will be replaced by the actual image data further down\n",
-    "    'flag': 'CANDIDATE', # String, pre-defined choices, see guide\n",
-    "    'lens_type': ['GALAXY'], # List of Strings, pre-defined choices, see guide\n",
+    "    'instrument': '',  # String, pre-defined choices, see guide\n",
+    "    'band': '',  # String, pre-defined choices, see guide\n",
+    "    'image': '',  # The name of the image file, this will be replaced by the actual image data further down\n",
+    "    'future': 'False', # String, 'True' or 'False'\n",
+    "    'date_taken': '1990-03-22', # A date in the format YYYY-MM-DD, can be in the future\n",
     "    'access_level': 'PRI'\n",
     "}\n",
     "\n",
@@ -86,44 +86,46 @@
     "# Here we have the RA, DEC, and an image file name as lists:\n",
     "ras = [0.1,0.2] # dummy values\n",
     "decs = [-10.1,-10.2] # dummy values\n",
-    "fnames = ['lens01.png','lens02.png'] # dummy values\n",
+    "dates = ['1990-03-22','2001-04-01']\n",
+    "fnames = ['imaging_data_A.png','imaging_data_B.png'] # dummy values\n",
     "\n",
-    "## If reading from a .csv file use the following command:\n",
-    "#ras,decs,fnames = np.genfromtxt('random_file.csv',dtype=None,skip_header=1,usecols=[0,3,4],delimiter=',',encoding=None,unpack=True)\n",
+    "## If reading from a .csv file use the following command (assuming 'instrument' and 'band' don't change):\n",
+    "#ras,decs,dates,fnames = np.genfromtxt('random_file.csv',dtype=None,skip_header=1,usecols=[0,1,3,4],delimiter=',',encoding=None,unpack=True)\n",
     "\n",
     "# And a path where our images are stored:\n",
     "path_to_img = 'some/dummy/path/'\n",
     "\n",
     "\n",
     "\n",
-    "# We define a list of lens objects:\n",
-    "new_lenses = []\n",
+    "# We define a list of imaging data objects:\n",
+    "new_imaging_data = []\n",
     "for i in range(0,len(ras)):\n",
-    "    lens = lens_tmp.copy()\n",
+    "    imaging = imaging_tmp.copy()\n",
     "\n",
-    "    lens['mugshot'] = path_to_img + fnames[i]\n",
-    "    lens['ra'] = round(ras[i],5)\n",
-    "    lens['dec'] = round(decs[i],5)\n",
-    "\n",
+    "    imaging['image'] = path_to_img + fnames[i]\n",
+    "    imaging['ra'] = round(ras[i],5)\n",
+    "    imaging['dec'] = round(decs[i],5)\n",
+    "    imaging['date_taken'] = dates[i]\n",
+    "    \n",
     "    ## If the RA and DEC are not in decimal degrees then use the following lines instead:\n",
     "    #c1 = SkyCoord(ras[i], unit=(u.hourangle, u.deg))\n",
     "    #c2 = SkyCoord(decs[i], unit=(u.hourangle, u.deg))\n",
-    "    #lens['ra'] = round(c1,5)\n",
-    "    #lens['dec'] = round(c2,5)\n",
+    "    #imaging['ra'] = round(c1,5)\n",
+    "    #imaging['dec'] = round(c2,5)\n",
     "    \n",
-    "    if not os.path.isfile(lens['mugshot']):\n",
-    "        print(i,': NO image found with this filename: ',lens['mugshot'])\n",
+    "    if not os.path.isfile(imaging['image']):\n",
+    "        print(i,': NO image found with this filename: ',imaging['image'])\n",
     "        sys.exit()\n",
     "    else:\n",
-    "        new_lenses.append(lens)\n",
+    "        new_imaging_data.append(imaging)\n",
     "\n",
     "        \n",
-    "print('Lenses to be injected: ',len(new_lenses))\n",
-    "if len(new_lenses)>0:\n",
-    "    print('First lens in the list looks like this: ')\n",
-    "    print(new_lenses[0])\n",
+    "print('Imaging data objects to be injected: ',len(new_imaging_data))\n",
+    "if len(new_imaging_data)>0:\n",
+    "    print('First imaging datum in the list looks like this: ')\n",
+    "    print(new_imaging_data[0])\n",
     "else:\n",
-    "    print('No lenses to inject!')\n",
+    "    print('No imaging data to inject!')\n",
     "    sys.exit()"
    ]
   },
@@ -134,7 +136,7 @@
    "source": [
     "### 3. Now send request to the database\n",
     "\n",
-    "Use the requests package to send a POST request to the relevant API endpoint. The *'mugshot'* field for each lens is replaced by the actual image data in base64 encoding. There is no need to change the following lines.\n"
+    "Use the requests package to send a POST request to the relevant API endpoint. The *'image'* field is replaced by the actual image data in base64 encoding. There is no need to change the following lines.\n"
    ]
   },
   {
@@ -144,12 +146,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for lens in new_lenses:\n",
-    "    lens['mugshot'] = image_to_base64(f\"{lens['mugshot']}\")\n",
+    "for imaging in new_imaging_data:\n",
+    "    if imaging['future'] == 'False':\n",
+    "        imaging['image'] = image_to_base64(f\"{imaging['image']}\")\n",
     "\n",
+    "final_json = {\n",
+    "    'data_type': 'imaging',\n",
+    "    'data': new_imaging_data    \n",
+    "}\n",
+    "        \n",
     "print(\"Uploading to the SLED server...\")\n",
-    "r = requests.post(\"https://sled.amnh.org/api/upload-lenses/\",\n",
-    "                  data=json.dumps(new_lenses),\n",
+    "r = requests.post(\"https://sled.amnh.org/api/upload-data/\",\n",
+    "                  data=json.dumps(final_json),\n",
     "                  headers={'Content-Type':'application/json'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
@@ -165,8 +173,8 @@
     "\n",
     "There are three possible types of response from the SLED API:\n",
     "- *errors*: your uploaded sample contains errors, e.g. the RA,DEC are not in the right format, etc.\n",
-    "- *further action required*: if duplicates are found or if public (PUB) lenses are uploaded there will be some further action required.\n",
-    "- *success*: the sample of new lenses was uploaded successfully"
+    "- *further action required*: if public (PUB) data are uploaded there will be some further action required.\n",
+    "- *success*: the sample of new data was uploaded successfully"
    ]
   },
   {
