--- a/examples/howto_simple_query.ipynb
+++ b/examples/howto_simple_query.ipynb
@@ -124,6 +124,7 @@
     "\n",
     "The response is a dictionary that contains two keys:\n",
     "\n",
+    "- *'summary'*: a short message summarizing how many lenses exist in the database.\n",
     "- *'existing_at'*: a list of all the indices in the given RA and DEC arrays where a lens was found in SLED.\n",
     "- *'lenses'*: a list of all the corresponding lenses and their fields from SLED."
    ]
@@ -135,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Existing lenses: \",len(dbquery[\"lenses\"]))\n",
+    "print(\"Summary: \",len(dbquery[\"message\"]))\n",
     "print(dbquery[\"existing_at\"])"
    ]
   }
