Querying instruments and bands works with their names instead of ids.

--- a/examples/howto_advanced_query.ipynb
+++ b/examples/howto_advanced_query.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4cf16fc8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59cdb6d3",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e8e04057",
    "metadata": {},
    "outputs": [],
@@ -85,16 +85,16 @@
     "\n",
     "\n",
     "query_pars = {\n",
-    "    'lens-ra_min':round(ra_min, 4),\n",
-    "    'lens-ra_max':round(ra_max, 4),\n",
-    "    'lens-dec_min':round(dec_min, 4),\n",
-    "    'lens-dec_max':round(dec_max, 4),\n",
-    "    'lens-flag': [\n",
-    "        'CONFIRMED',\n",
-    "        'CONTAMINANT'\n",
-    "    ],\n",
+    "    #'lens-ra_min':round(ra_min, 4),\n",
+    "    #'lens-ra_max':round(ra_max, 4),\n",
+    "    #'lens-dec_min':round(dec_min, 4),\n",
+    "    #'lens-dec_max':round(dec_max, 4),\n",
+    "    #'lens-flag': [\n",
+    "    #    'CONFIRMED',\n",
+    "    #    'CONTAMINANT'\n",
+    "    #],\n",
     "    'imaging-instrument': [\n",
-    "        1,\n",
+    "        'ACS',\n",
     "    ],\n",
     "    \"download-lens_options\": [\n",
     "        \"ra\",\n",
@@ -120,13 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "c3f0464a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Querying the SLED server...\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Querying the SLED server...\")\n",
-    "r = requests.post(\"https://sled.amnh.org/api/query-lenses-full/\",\n",
+    "r = requests.post(\"http://127.0.0.1:8000/api/query-lenses-full/\",\n",
     "                  data=json.dumps(query_pars),\n",
     "                  headers={'Content-Type':'application/json'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
@@ -149,10 +157,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ea3096e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Returned lenses:  809\n",
+      "{'ra': '0.441610', 'dec': '-54.673950', 'name': 'HAHJ0001-5440', 'mugshot': '/files/lenses/13473.png', 'redshift': []}\n"
+     ]
+    }
+   ],
    "source": [
     "if len(dbquery[\"errors\"]) > 0:\n",
     "    print(dbquery[\"errors\"])\n",
@@ -160,6 +177,14 @@
     "    print(\"Returned lenses: \",len(dbquery[\"lenses\"]))\n",
     "    print(dbquery[\"lenses\"][0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63d720b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
