Modified howto example notebook.

--- a/examples/howto_simple_query.ipynb
+++ b/examples/howto_simple_query.ipynb
@@ -112,7 +112,8 @@
     "                  headers={'Content-Type':'application/json'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
-    "dbquery = json.loads(r.text)"
+    "dbquery = json.loads(r.text)\n",
+    "print(r)"
    ]
   },
   {
@@ -136,9 +137,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Summary: \",len(dbquery[\"message\"]))\n",
+    "print(\"Summary: \",dbquery[\"summary\"])\n",
     "print(dbquery[\"existing_at\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb0d051e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
