Added agent header in request.

--- a/examples/howto_simple_query.ipynb
+++ b/examples/howto_simple_query.ipynb
@@ -109,7 +109,7 @@
     "print(\"Querying the SLED server...\")\n",
     "r = requests.post(\"https://sled.amnh.org/api/query-lenses/\",\n",
     "                  data=json.dumps(query_pars),\n",
-    "                  headers={'Content-Type':'application/json'},\n",
+    "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
     "dbquery = json.loads(r.text)\n",
