--- a/examples/howto_upload_lenses.ipynb
+++ b/examples/howto_upload_lenses.ipynb
@@ -150,7 +150,7 @@
     "print(\"Uploading to the SLED server...\")\n",
     "r = requests.post(\"https://sled.amnh.org/api/upload-lenses/\",\n",
     "                  data=json.dumps(new_lenses),\n",
-    "                  headers={'Content-Type':'application/json'},\n",
+    "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
     "dbquery = json.loads(r.text)"
