--- a/examples/howto_create_collection.ipynb
+++ b/examples/howto_create_collection.ipynb
@@ -140,7 +140,7 @@
     "print(\"Uploading collection to the SLED server...\")\n",
     "r = requests.post(\"https://sled.amnh.org/api/upload-collection/\",\n",
     "                  data=json.dumps(query_pars),\n",
-    "                  headers={'Content-Type':'application/json'},\n",
+    "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
     "dbquery = json.loads(r.text)"
