--- a/examples/howto_create_paper.ipynb
+++ b/examples/howto_create_paper.ipynb
@@ -151,7 +151,7 @@
     "print(\"Uploading paper to the SLED server...\")\n",
     "r = requests.post(\"https://sled.amnh.org/api/upload-papers/\",\n",
     "                  data=json.dumps([paper]),\n",
-    "                  headers={'Content-Type':'application/json'},\n",
+    "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
     "dbquery = json.loads(r.text)"
