--- a/examples/howto_upload_redshifts.ipynb
+++ b/examples/howto_upload_redshifts.ipynb
@@ -142,7 +142,7 @@
     "print(\"Uploading to the SLED server...\")\n",
     "r = requests.post(\"https://sled.amnh.org/api/upload-data/\",\n",
     "                  data=json.dumps(final_json),\n",
-    "                  headers={'Content-Type':'application/json'},\n",
+    "                  headers={'Content-Type':'application/json','User-Agent':'SLED-api/1.0'},\n",
     "                  auth=HTTPBasicAuth(username,password)\n",
     "                  )\n",
     "dbquery = json.loads(r.text)"
