Fixed image_to_base function that was not defined.

--- a/examples/howto_upload_generic_images.ipynb
+++ b/examples/howto_upload_generic_images.ipynb
@@ -143,7 +143,8 @@
    "outputs": [],
    "source": [
     "for generic in new_generics:\n",
-    "    generic['image'] = image_to_base64(f\"{generic['image']}\")\n",
+    "    with open(generic['image'], \"rb\") as image_file:\n",
+    "        generic['image'] = base64.b64encode(image_file.read())\n",
     "\n",
     "final_json = {\n",
     "    'data_type': 'genericimage',\n",
