--- a/examples/howto_upload_imaging_data.ipynb
+++ b/examples/howto_upload_imaging_data.ipynb
@@ -148,7 +148,8 @@
    "source": [
     "for imaging in new_imaging_data:\n",
     "    if imaging['future'] == 'False':\n",
-    "        imaging['image'] = image_to_base64(f\"{imaging['image']}\")\n",
+    "        with open(imaging['image'], \"rb\") as image_file:\n",
+    "            imaging['image'] = base64.b64encode(image_file.read())\n",
     "\n",
     "final_json = {\n",
     "    'data_type': 'imaging',\n",
