--- a/examples/howto_upload_lenses.ipynb
+++ b/examples/howto_upload_lenses.ipynb
@@ -145,7 +145,8 @@
    "outputs": [],
    "source": [
     "for lens in new_lenses:\n",
-    "    lens['mugshot'] = image_to_base64(f\"{lens['mugshot']}\")\n",
+    "    with open(lens['mugshot'], \"rb\") as image_file:\n",
+    "        lens['mugshot'] = base64.b64encode(image_file.read())\n",
     "\n",
     "print(\"Uploading to the SLED server...\")\n",
     "r = requests.post(\"https://sled.amnh.org/api/upload-lenses/\",\n",
