--- a/examples/howto_upload_spectra.ipynb
+++ b/examples/howto_upload_spectra.ipynb
@@ -147,7 +147,8 @@
    "source": [
     "for spectrum in new_spectra:\n",
     "    if spectrum['future'] == 'False':\n",
-    "        spectrum['image'] = image_to_base64(f\"{spectrum['image']}\")\n",
+    "        with open(spectrum['image'], \"rb\") as image_file:\n",
+    "            spectrum['image'] = base64.b64encode(image_file.read())\n",
     "\n",
     "final_json = {\n",
     "    'data_type': 'spectrum',\n",
